@@ -32,6 +32,8 @@
     </modules>
 
     <properties>
+        <group.name>hoot.smalltalk</group.name>
+
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.build.timestamp.format>yyyy.MMdd.HHmm</maven.build.timestamp.format>
         <build.timestamp>${maven.build.timestamp}</build.timestamp>
@@ -44,18 +46,20 @@
         <version.antlr>4.11.1</version.antlr>
         <version.antlr.st>4.3.4</version.antlr.st>
 
+        <version.spring-boot>2.5.5</version.spring-boot>
         <version.maven.war>3.2.3</version.maven.war>
         <version.maven.asm>3.1.1</version.maven.asm>
-        <version.maven-plugin>3.6.0</version.maven-plugin>
-        <version.maven.compiler>3.8.1</version.maven.compiler>
+        <version.maven-plugin>3.9.0</version.maven-plugin>
+        <version.maven.compiler>3.11.0</version.maven.compiler>
         <version.maven.surefire>2.22.1</version.maven.surefire>
-        <version.maven.jacoco>0.8.5</version.maven.jacoco>
+        <version.maven.jacoco>0.8.10</version.maven.jacoco>
 
         <gitlab-group>9887672</gitlab-group>
         <gitlab-project>10019964</gitlab-project>
 
         <run-headless>-Djava.awt.headless=true</run-headless>
         <memory-args>-Xmx1024m -Xms1024m</memory-args>
+        <compiler-args></compiler-args> <!-- default = none, see profile for 21 below -->
         <no-path-check>-Djdk.net.URLClassPath.disableClassPathURLCheck=true</no-path-check>
         <test-args>${memory-args} ${no-path-check} ${run-headless}</test-args>
 
@@ -240,10 +244,22 @@
                     <artifactId>hoot-compiler-bundle</artifactId>
                     <version>2020.0101.0101</version>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>${version.maven.compiler}</version>
+                </plugin>
             </plugins>
         </pluginManagement>
 
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <compilerArgs>${compiler-args}</compilerArgs>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
@@ -251,6 +267,39 @@
                 <configuration>
                     <deployAtEnd>true</deployAtEnd>
                     <skip>true</skip>
+                </configuration>
+            </plugin>
+            <plugin><!-- generate JAR module names from artifact IDs -->
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <version>3.4.0</version>
+                <executions>
+                    <execution>
+                        <id>regex-property</id>
+                        <goals>
+                            <goal>regex-property</goal>
+                        </goals>
+                        <configuration>
+                            <skip>true</skip>
+                            <name>jar.module.name</name>
+                            <value>${project.artifactId}</value>
+                            <regex>\-</regex>
+                            <replacement>\.</replacement>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin><!-- construct and inject module names into JARs -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.3.0</version>
+                <configuration>
+                    <skip>true</skip>
+                    <archive>
+                        <manifestEntries>
+                            <Automatic-Module-Name>${group.name}.${jar.module.name}</Automatic-Module-Name>
+                        </manifestEntries>
+                    </archive>
                 </configuration>
             </plugin>
         </plugins>
@@ -275,16 +324,45 @@
             <properties>
                 <maven.compiler.source>1.8</maven.compiler.source>
                 <maven.compiler.target>1.8</maven.compiler.target>
+                <maven.compiler.release>8</maven.compiler.release>
             </properties>
         </profile>
         <profile>
-            <id>java-11-plus</id>
+            <id>java-11-16-support-11</id>
             <activation>
                 <activeByDefault>true</activeByDefault>
-                <jdk>[11,)</jdk>
+                <jdk>[11,17)</jdk>
             </activation>
             <properties>
+                <maven.compiler.source>11</maven.compiler.source>
+                <maven.compiler.target>11</maven.compiler.target>
                 <maven.compiler.release>11</maven.compiler.release>
+            </properties>
+        </profile>
+        <profile>
+            <id>java-17-plus</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+                <jdk>[17,21)</jdk>
+            </activation>
+            <properties>
+                <maven.compiler.source>11</maven.compiler.source>
+                <maven.compiler.target>17</maven.compiler.target>
+                <maven.compiler.release>17</maven.compiler.release>
+            </properties>
+        </profile>
+        <profile>
+            <id>java-21-plus</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+                <jdk>[21,)</jdk>
+            </activation>
+            <properties>
+                <maven.compiler.source>11</maven.compiler.source>
+                <maven.compiler.target>21</maven.compiler.target>
+                <maven.compiler.release>21</maven.compiler.release>
+                <version.spring-boot>3.1.4</version.spring-boot>
+                <compiler-args>-proc:full</compiler-args>
             </properties>
         </profile>
     </profiles>
